--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "debug": "nodemon --inspect app.js",
     "server": "nodemon app.js"
   },
   "repository": {
